# ren

./: .gitignore
Qt图形界面/: CMakeLists.txt  主程序.cpp  工作台窗口.cpp  工作台窗口.h  招聘图形界面.pro  招聘服务.cpp  招聘服务.h  构建学习助手图形界面.bat  构建学习助手控制台版.bat  构建招聘图形界面.bat  登录窗口.cpp  登录窗口.h  说明文档.md  运行学习助手图形界面.bat  运行学习助手控制台版.bat  运行招聘图形界面.bat
Qt图形界面/学习助手/: OpenAI客户端.cpp  OpenAI客户端.h  学习助手图形主程序.cpp  学习服务.cpp  学习窗口.cpp  学习窗口.h  演示主程序.cpp  说明文档.md
deliverables/: 人才招聘系统可行性分析报告.md
persist_ascii_env/: recruitment_data.txt
persist_test_env/: recruitment_data.txt
qt_gui/: CMakeLists.txt  README.md  build_qt_gui.bat  build_study_assistant.bat  build_study_assistant_qt.bat  dashboard_window.cpp  dashboard_window.h  login_window.cpp  login_window.h  main.cpp  recruitment_qt_gui.pro  recruitment_service.cpp  recruitment_service.h  register_smoke_data.txt  run_qt_gui.bat  run_study_assistant.bat  run_study_assistant_qt.bat  smoke_test_data.txt  study_assistant_data.txt
qt_gui/study_assistant/: README.md  demo_main.cpp  openai_client.cpp  openai_client.h  study_qt_main.cpp  study_service.cpp  study_service.h  study_window.cpp  study_window.h
software_engineering_experiments/experiment_02/: README.md  experiment_02_report.md
software_engineering_experiments/experiment_03/: README.md  experiment_03_report.md  risk_register.md  scrum_backlog.md
software_engineering_experiments/experiment_04/: README.md  devops_plan.md  experiment_04_report.md
software_engineering_experiments/experiment_05/: README.md  experiment_05_report.md  project_tracking_gantt.md  team_organization.md
software_engineering_experiments/experiment_06/: README.md  effort_estimation.md  experiment_06_report.md  srs_structure.md
software_engineering_experiments/experiment_07/: README.md  experiment_07_report.md  srs_draft.md  static_models.md
software_engineering_experiments/experiment_08/: README.md  dynamic_models.md  experiment_08_report.md  petri_net_model.md  srs_updates.md
software_engineering_experiments/experiment_09/: README.md  architecture_views.md  experiment_09_report.md  project_tracking.md  sad_draft.md  srs_final.md  standards_and_case_study.md
software_engineering_experiments/experiment_11/: README.md  architecture_evaluation.md  architecture_improvement_plan.md  experiment_11_report.md  project_tracking.md  sad_final.md  sad_review_checklist.md
software_engineering_experiments/experiment_12/: README.md  dependency_injection_notes.md  design_principles_analysis.md  experiment_12_report.md  module_design_evaluation.md  project_tracking.md  refactoring_recommendations.md
软件工程实验成果/实验七_SRS初稿与静态建模/: SRS初稿.md  SRS模板对比.md  实验七报告.md  成果目录.md  静态模型.md
软件工程实验成果/实验三_可行性分析/: Scrum待办列表.md  实验三报告.md  成果目录.md
软件工程实验成果/实验九_体系结构设计初稿/: SAD初稿.md  SRS定稿.md  实验九报告.md  成果目录.md  架构视图.md  标准对比与案例研究.md  项目跟踪表.md
软件工程实验成果/实验二_项目理解/: 实验二报告.md  成果目录.md  项目跟踪表.md
软件工程实验成果/实验五_原型与需求分析/: 实验五报告.md  成果目录.md  活动时间分析.md  项目跟踪甘特图.md
软件工程实验成果/实验八_动态建模与Petri网/: SRS补充.md  动态模型.md  实验八报告.md  成果目录.md
软件工程实验成果/实验六_结构化分析/: SRS结构.md  实验六报告.md  工作量估算.md  成果目录.md  风险管理计划.md
软件工程实验成果/实验十一_SAD定稿与架构评估/: SAD定稿.md  SAD评审清单.md  实验十一报告.md  成果目录.md  架构改进计划.md  项目跟踪表.md
软件工程实验成果/实验十二_设计原则与依赖注入/: 依赖注入学习笔记.md  实验十二报告.md  成果目录.md  模块设计评估.md  设计原则分析.md  重构建议.md  项目跟踪表.md
软件工程实验成果/实验四_需求获取/: DevOps计划.md  实验四报告.md  成果目录.md  活动网络图.md
